--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Dars</title>
 </head>
 <body>
-    <h1 class="title">Sanjar Backend Developer</h1>
+    <h1 class="title">Sanjar Fullstack Developer</h1>
 </body>
 </html>
